# moe-autopilot-studio

./: .dockerignore  .env.example  .gitignore  BUILD_WEEK.md  CONTRIBUTING.md  Dockerfile  LICENSE  MoEAutopilotStudio.spec  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  JUDGE_QUICKSTART.md  SUBMISSION.md  VIDEO_SCRIPT.md  YOUTUBE_UPLOAD.md
fixtures/: coder-next-decode.json  coder-next-e2e.json  gptoss-adaptive.json  manifest.json  qwen35-decode.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  test-setup.ts  types.ts
scripts/: build_pages.py  build_release.ps1  sanitize_fixtures.py  smoke_release.ps1
space/: README.md
src/moe_autopilot_studio/: __init__.py  advisor.py  app.py  codex_client.py  commands.py  coverage.py  engine.py  exporters.py  fixtures.py  launcher.py  models.py  parsers.py  paths.py  runner.py  security.py  storage.py
tests/: test_advisor.py  test_api.py  test_codex.py  test_commands.py  test_engine.py  test_parsers.py  test_runner.py  test_security.py  test_storage.py
tests/data/: server-timing.json
videos/moe-autopilot-studio-build-week/: BRIEF.md  README.md  SCRIPT.md  STORYBOARD.md  audio_engine_meta.json  audio_meta.json  audio_request.json  caption_groups.json  frame.md  index.html  meta.json  package-lock.json  package.json
videos/moe-autopilot-studio-build-week/.hyperframes/: caption-skin.html
videos/moe-autopilot-studio-build-week/assets/: studio-workflow.webm
videos/moe-autopilot-studio-build-week/assets/voice/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
videos/moe-autopilot-studio-build-week/compositions/: captions.html
videos/moe-autopilot-studio-build-week/compositions/frames/: 01-wrong-question.html  02-measured-enable.html  03-decision-flip.html  04-protocol-guard.html  05-bounded-advisor.html  06-windows-runner.html  07-build-week-boundary.html  08-reproduce.html
videos/moe-autopilot-studio-build-week/scripts/: build-video.mjs  capture-studio.mjs  estimate-word-timings.mjs
