[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-autopilot-studio"
version = "0.2.0"
description = "Evidence-grounded planning and experiment tooling for local MoE inference."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "JC-OM" }]
classifiers = [
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
gguf = ["gguf>=0.17"]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
]
package = ["pyinstaller>=6.12,<7"]

[project.scripts]
moe-autopilot-studio = "moe_autopilot_studio.launcher:main"

[project.urls]
Homepage = "https://github.com/jcomlabs/moe-autopilot-studio"
Repository = "https://github.com/jcomlabs/moe-autopilot-studio"
Issues = "https://github.com/jcomlabs/moe-autopilot-studio/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moe_autopilot_studio = ["static/**/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
